// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login Endpoint Should include other required parameters 1`] = `
Object {
  "client_id": "123456",
  "display": "popup",
}
`;

exports[`Redirect URI Handler Should able to override the profile params 1`] = `
Object {
  "dateOfBirth": undefined,
  "email": "Josianne_Bosco@gmail.com",
  "firstName": "Greta",
  "gender": undefined,
  "id": "54f483f9-9b50-4c15-b53f-46ece9e3e5f8",
  "lastName": "Erdman",
  "name": "Manuel Auer",
  "profilePicture": "http://lorempixel.com/640/480",
  "provider": "Facebook",
  "raw": Object {
    "email": "Josianne_Bosco@gmail.com",
    "first_name": "Greta",
    "id": "54f483f9-9b50-4c15-b53f-46ece9e3e5f8",
    "last_name": "Erdman",
    "name": "Manuel Auer",
    "picture": Object {
      "data": Object {
        "url": "http://lorempixel.com/640/480",
      },
    },
  },
}
`;

exports[`Redirect URI Handler Should able to override the profile params 2`] = `
Array [
  "https://graph.facebook.com/v4.0/me",
  Object {
    "headers": Object {
      "Authorization": "Bearer 87b23deb-3fde-4de5-b726-c1a4bb2747ff",
    },
    "params": Object {
      "fields": "id",
    },
  },
]
`;

exports[`Redirect URI Handler Should handle redirection properly 1`] = `
Object {
  "dateOfBirth": undefined,
  "email": "Josianne_Bosco@gmail.com",
  "firstName": "Greta",
  "gender": undefined,
  "id": "54f483f9-9b50-4c15-b53f-46ece9e3e5f8",
  "lastName": "Erdman",
  "name": "Manuel Auer",
  "profilePicture": "http://lorempixel.com/640/480",
  "provider": "Facebook",
  "raw": Object {
    "email": "Josianne_Bosco@gmail.com",
    "first_name": "Greta",
    "id": "54f483f9-9b50-4c15-b53f-46ece9e3e5f8",
    "last_name": "Erdman",
    "name": "Manuel Auer",
    "picture": Object {
      "data": Object {
        "url": "http://lorempixel.com/640/480",
      },
    },
  },
}
`;

exports[`Redirect URI Handler Should handle redirection properly 2`] = `
Array [
  "https://graph.facebook.com/v4.0/oauth/access_token",
  Object {
    "client_id": "123456",
    "client_secret": "super-secret",
    "code": "lorem",
    "redirect_uri": "http://127.0.0.1/auth/facebook/callback",
  },
  Object {
    "headers": Object {
      "Accept": "application/json",
    },
  },
]
`;

exports[`Redirect URI Handler Should handle redirection properly 3`] = `
Array [
  "https://graph.facebook.com/v4.0/me",
  Object {
    "headers": Object {
      "Authorization": "Bearer 87b23deb-3fde-4de5-b726-c1a4bb2747ff",
    },
    "params": Object {
      "fields": "id,name,first_name,last_name,picture.type(large)",
    },
  },
]
`;
